--- a/index.html
+++ b/index.html
@@ -1,7 +1,90 @@
 ---
-# You don't need to edit this file, it's empty on purpose.
-# Edit theme's home layout instead if you wanna make some changes
-# See: https://jekyllrb.com/docs/themes/#overriding-theme-defaults
-layout: home
-author_profile: true
+layout: splash
+title: "<span style='font-size: 0.7em;'>Working towards Becoming an Independent Scientific Re-searcher <i class='fas fa-earth-americas'></i></span>"
+permalink: /
+author_profile: false
+
+
+
+header:
+  overlay_image: /assets/images/landscape_profile.jpg
+  actions:
+    - label: "View research"
+      url: "/research/"
+      class: "btn btn--inverse"
 ---
+
+<div style="display: flex; flex-wrap: wrap; gap: 2rem; align-items: flex-start; margin-bottom: 3rem;">
+
+  <!-- Left: Text -->
+  <div style="flex: 2; min-width: 280px; max-width: 1000px;">
+    <p><strong>Welcome!!!</strong></p>
+    <p>
+      My name is Zhilin Shi, a second year master's student in the department of Geography at Texas A&M.
+      I'm current working under the supervision of <a href="https://artsci.tamu.edu/geography/contact/profiles/andrew-j-moodie.html">Dr. Andrew Moodie</a>.
+      This is my personal site to showcase my work, research interests, and more.
+    </p>
+    <p><em>
+      My current research integrates a 1-D Compaction model with a rules-based 2-D morphodynamic delta model to investigate nonuniform shallow compaction in deltaic landscapes.
+    </em></p>
+  </div>
+
+  <!-- Right: Image -->
+  <div style="flex: 1; min-width: 250px; max-width: 300px;">
+    <img src="/assets/images/homepage_portrait.jpg" alt="Zhilin Shi" style="width: 100%; border-radius: 12px;" />
+  </div>
+
+</div>
+
+
+
+
+<div style="display: flex; flex-wrap: wrap; gap: 2rem; justify-content: space-between;">
+
+  <!-- Card 1 -->
+  <div style="flex: 1; min-width: 280px; max-width: 320px; background: white; border-radius: 12px; padding: 1rem; box-shadow: 0 2px 8px rgba(0,0,0,0.1); display: flex; flex-direction: column; justify-content: space-between;">
+    <img src="/assets/images/research_preview.jpg" alt="Project 1" style="width: 100%; height: 220px; object-fit: cover; border-radius: 8px;">
+    <div style="flex-grow: 1; display: flex; flex-direction: column; justify-content: space-between;">
+      <h3 style="margin-top: 1rem; font-weight: bold;">Research</h3>
+      <div style="margin-top: auto;">
+        <a href="/research/" style="display: inline-block; margin-top: 1rem; padding: 0.5rem 1rem; background: #756032; color: white; text-decoration: none; border-radius: 6px;">Learn More</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Card 2 -->
+  <div style="flex: 1; min-width: 280px; max-width: 320px; background: white; border-radius: 12px; padding: 1rem; box-shadow: 0 2px 8px rgba(0,0,0,0.1); display: flex; flex-direction: column; justify-content: space-between;">
+    <img src="/assets/images/teaching_preview.jpg" alt="Teaching" style="width: 100%; height: 220px; object-fit: cover; border-radius: 8px;">
+    <div style="flex-grow: 1; display: flex; flex-direction: column; justify-content: space-between;">
+      <h3 style="margin-top: 1rem; font-weight: bold;">Teaching</h3>
+      <div style="margin-top: auto;">
+        <a href="/teaching/" style="display: inline-block; margin-top: 1rem; padding: 0.5rem 1rem; background: #756032; color: white; text-decoration: none; border-radius: 6px;">Learn More</a>
+      </div>
+    </div>
+  </div>
+
+  <!-- Card 3 -->
+  <div style="flex: 1; min-width: 280px; max-width: 320px; background: white; border-radius: 12px; padding: 1rem; box-shadow: 0 2px 8px rgba(0,0,0,0.1); display: flex; flex-direction: column; justify-content: space-between;">
+    <img src="/assets/images/cv_preview.png" alt="Project 3"
+     style="width: 100%; height: 220px; object-fit: cover; border-radius: 8px; filter: blur(5px); transition: 0.3s;"
+     onmouseover="this.style.filter='none';"
+     onmouseout="this.style.filter='blur(5px)';" />
+    <div style="flex-grow: 1; display: flex; flex-direction: column; justify-content: space-between;">
+      <h3 style="margin-top: 1rem; font-weight: bold;">Professional</h3>
+      <div style="margin-top: auto;">
+        <a href="/cv/" style="display: inline-block; margin-top: 1rem; padding: 0.5rem 1rem; background: #756032; color: white; text-decoration: none; border-radius: 6px;">Learn More</a>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+
+
+
+
+
+
+
+
+
